Add changes in button styling and div color

--- a/src/Components/Discover/Discover.css
+++ b/src/Components/Discover/Discover.css
@@ -68,7 +68,7 @@
 
 .quote-section{
     /* background: linear-gradient(6.19deg, #EFE9E6 7.36%, #EFE9E6, #181818); */
-    background-color: #EFE9E6;
+    background-color: #ecf0f1;
     width: 100%;
     height: fit-content;
     display: flex;
