--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer-wrapper{
     display: flex;
     flex-direction: column;
-    background-color: #EFE9E6;
+    background-color: black;
 }
 
 /* restaurant services css */
